Revision history for {{$dist->name}}

{{$NEXT}}
          - now using [PromptIfStale] to ensure the plugin bundle is always
            the latest version, and all plugins are checked at release time
          - bring back [Test::CPAN::Changes], now that the spec has become a
            bit more reasonable (removed since v0.015)

0.017     2013-08-04 09:12:17 PDT-0700 (Karen Etheridge)
          - update minimum version of perl required, re syntax used in
            templates applied during minting
          - inject a forced dependency on a fixed CPAN::Meta::Check
          - skip pluginbundle tests if .git dir is not present (too many
            plugins rely on git data)

0.016     2013-08-03 12:44:15 PDT-0700 (Karen Etheridge)
          - added basic tests for the pluginbundle and minter
          - clean up .ackrc editing at build time

0.015     2013-08-01 16:02:32 PDT-0700 (Karen Etheridge)
          - [Test::CPAN::Changes] omitted if its version >= 0.21, pending
            resolution of too-strict datetime formats (e.g. RT#87499)

0.014     2013-07-29 17:25:48 PDT-0700 (Karen Etheridge)
          - fix dist.ini munging done at release time (v0.013)
          - injected compile test now also checks files in examples/
          - ExecDir now looks for installable executables in script/, for
            compatibility with Module::Build::Tiny

0.013     2013-07-28 16:59:41 PDT-0700 (Karen Etheridge)
          - inserts --ignore-dir line into .ackrc at build time
          - when releasing this pluginbundle, dist.ini is edited (and
            committed) to force a dependency on the newly-released version, and
            all other local dist.inis using this bundle are also edited
            (without committing)
          - issue tracking is disabled in newly-created github repositories

0.012     2013-07-16 18:32:35 PDT-0700 (Karen Etheridge)
          - do not require trial versions of [Test::Compile], allowing