@@ -189,3 +189,5 @@ Test::MinimumVersion.max_target_perl = 5.018000
 CopyFilesFromBuild.copy[] = dist.ini
 ; ...and commit it
 Git::Commit.allow_dirty[] = dist.ini
+NextRelease.time_zone = UTC
+NextRelease.format = %-8V  %{yyyy-MM-dd HH:mm:ss'Z'}d (%U)
