@@ -5,6 +5,8 @@ Revision history for {{$dist->name}}
             the latest version, and all plugins are checked at release time
           - bring back [Test::CPAN::Changes], now that the spec has become a
             bit more reasonable (removed since v0.015)
+          - Changes entries are now made with times in UTC, with a trailing
+            'Z' rather than the CLDR 'ZZZZ' format code
 
 0.017     2013-08-04 09:12:17 PDT-0700 (Karen Etheridge)
           - update minimum version of perl required, re syntax used in
